# TokenMeter

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
.codex/skills/tokenmeter-release/: SKILL.md
apps/dashboard/: README.md  index.html  package.json  tsconfig.app.json  vite.config.ts
apps/dashboard/scripts/: tauri-dev.mjs
apps/dashboard/src/: App.test.tsx  App.tsx  index.css  main.tsx  vite-env.d.ts
apps/dashboard/src-tauri/: Cargo.toml  tauri.conf.json
apps/dashboard/src-tauri/capabilities/: default.json
apps/dashboard/src-tauri/icons/: icon.icns
apps/dashboard/src-tauri/src/: codex.rs  commands.rs  lib.rs  settings.rs  updates.rs
apps/dashboard/src/components/: settings-sheet.tsx  workspace-scope-selectors.tsx
apps/dashboard/src/components/ui/: chart.tsx  tabs.tsx
apps/dashboard/src/lib/: app-settings.ts  app-updates.ts  codex-overview.ts  theme-bootstrap.test.ts  theme-bootstrap.ts  workspace-scope.ts
apps/dashboard/src/test/: setup.ts
apps/server/: package.json  tsconfig.json
apps/server/src/: index.ts
design-system/tokenmeter/: MASTER.md
design-system/tokenmeter/branding/: README.md
design-system/tokenmeter/pages/: dashboard.md
docs/: homebrew-tap.md  release-strategy.md
openspec/changes/add-tauri-desktop-app/: design.md  proposal.md  tasks.md
openspec/changes/add-tauri-desktop-app/specs/desktop-app/: spec.md
packaging/homebrew/Casks/: tokenmeter.rb
