[package]
name = "tokenmeter"
version = "0.1.8"
description = "Local-first desktop app for understanding Codex usage on your machine"
authors = ["Taeu <lteawoo@naver.com>"]
license = "UNLICENSED"
repository = "https://github.com/lteawoo/TokenMeter"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"

[dev-dependencies]
tauri = { version = "2.10.3", features = ["test"] }
